[workspace]
resolver = "1"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "0.21.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0.111"
clap = { version = "4.4.17", features = ["derive"] }
