[package]
name = "hyle-verifier"
version = "0.1.0"
edition = "2021"

[lib]
name = "hyle_verifier"
path = "src/lib.rs"

[[bin]]
name = "hyle-verifier"
path = "src/main.rs"

[dependencies]
risc0-zkvm = { version = "0.21.0" }
base64 = "0.22.1"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0.111"
