[package]
name = "sp1-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
sp1-core = { git = "https://github.com/succinctlabs/sp1.git", rev = "df9a346" }
sp1-prover = { git = "https://github.com/succinctlabs/sp1.git", rev = "df9a346" }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "df9a346" }
base64 = "0.22.1"
hyle_contract = { path = "../hyle-contract" }
serde_json = "1.0.117"
